Fixes #30: ensure the comic nav and tags are always readable colors

--- a/_sass/common.scss
+++ b/_sass/common.scss
@@ -171,6 +171,7 @@ blockquote{
 
 .badge {
   font-weight: normal;
+  text-shadow: none;
   color: #333;
 
   &.comics{
