--- a/_sass/post.scss
+++ b/_sass/post.scss
@@ -117,6 +117,7 @@ article.post{
 
     h4{
       font-size: 18px;
+      text-shadow: 1px 1px 1px #111;
 
       @media (min-width: $bs-break-sm) {
         font-size: 20px;
@@ -136,10 +137,6 @@ article.post{
         margin: 4px 2px;
         font-size: 14px;
         font-weight: normal;
-
-        &:hover{
-          background-color: #333;
-        }
       }
     }
 
